# nndsk-ro-launcher

./: .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE_CLEANUP_PLAN.md  CLAUDE.md  Cargo.toml  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: client_profiles.json
src-tauri/resources/dgvoodoo/: dgVoodoo.conf
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: audio.rs  autobuff.rs  autopot.rs  check.rs  deps.rs  gecko.rs  launch.rs  launcher.rs  mod.rs  prefix.rs  runner.rs  runners.rs  server_tools.rs  servers.rs  settings.rs  setup.rs  spammer.rs  storage.rs
src-tauri/src/models/: autopot.rs  dependency.rs  game_client.rs  launch.rs  mod.rs  server.rs  server_tools.rs  settings.rs  spammer.rs  storage.rs  tool_kind.rs
src-tauri/src/state/: game_process.rs  mod.rs
src-tauri/src/tools/: game_pid.rs  mod.rs  session.rs
src-tauri/src/tools/autobuff/: loop_runner.rs  service.rs  session.rs
src-tauri/src/tools/autopot/: loop_runner.rs  mod.rs  profiles.rs  scanner.rs  service.rs  session.rs
src-tauri/src/tools/input/: gateway.rs  mod.rs  uinput_worker.rs  ydotool.rs
src-tauri/src/tools/launcher/: mod.rs  session.rs
src-tauri/src/tools/prefix/: mod.rs  setup.rs
src-tauri/src/tools/runners/: managed.rs  (+2 more)
src-tauri/src/utils/: audio.rs  events.rs  fs.rs  gecko.rs  json.rs  mod.rs  operation_lock.rs  prefix.rs  process.rs  runner.rs  settings.rs  system.rs  webview.rs  wine.rs
(+131 files in other folders)
